<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="title_activity_tip_calculator">Mortgage Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
    <string name="down_payment">Down Payment</string>
    <string name="mortgage_amount">Mortgage Amount</string>
    <string name="insurance_rate">Insurance Rate</string>
    <string name="loan_term">Loan Term</string>
    <string name="mortgageAmount" />
    <string name="bank_name">Select Bank</string>
    <string name="btn_calculate">Calculate</string>
    <string name="radiobutton_monthly">10 Years</string>
    <string name="r_btn_quarterly">15 Years</string>
    <string name="r_btn_yearly">30 Years</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="button_schedule">Schedule</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="month">Month</string>
    <string name="payment">Payment</string>
    <string name="principal">Principal</string>
    <string name="interest">Interest</string>
    <string name="remaining">Remaining</string>

    <string-array name="arrayOfBanks">
        <item>Choose A Lender</item>
        <item>Bank Of America</item>
        <item>Citizens Bank</item>
        <item>Gringotts</item>
        <item>HSBC</item>
    </string-array>
    <string name="title_activity_table">Amortization Table</string>

</resources>